--- a/app/src/main/res/layout/activity_branding.xml
+++ b/app/src/main/res/layout/activity_branding.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BrandingActivity"/>
+    tools:context=".BrandingActivity">
+
+    <EditText
+        android:id="@+id/editText_search_minutes"
+        android:autofillHints=""
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Search" />
+
+    <ListView
+        android:id="@+id/branding_listview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/editText_search_minutes"/>
+
+</RelativeLayout>
