--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,51 +7,33 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button_start_service"
-        android:layout_width="181dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/start_service"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_stop_service"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.242" />
-
-    <Button
-        android:id="@+id/button_delete_coordinates"
+        android:id="@+id/button_stop_service"
         android:layout_width="182dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/delete_coordinates"
+        android:text="@string/stop_service"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_view_coordinates"
-        app:layout_constraintTop_toBottomOf="@+id/button_stop_service"
-        app:layout_constraintVertical_bias="0.187" />
+        app:layout_constraintStart_toEndOf="@+id/button_start_service"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.07" />
 
     <Button
-        android:id="@+id/button_view_map"
-        android:layout_width="181dp"
+        android:id="@+id/button_delete_final_coordinates"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/view_map"
+        android:layout_marginEnd="24dp"
+        android:text="@string/delete_final_coordinates"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_view_branding"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_view_coordinates"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintStart_toEndOf="@+id/button_view_final_coordinates"
+        app:layout_constraintTop_toBottomOf="@+id/button_view_branding"
+        app:layout_constraintVertical_bias="0.301" />
 
     <Button
         android:id="@+id/button_view_coordinates"
@@ -67,7 +49,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_start_service"
-        app:layout_constraintVertical_bias="0.187" />
+        app:layout_constraintVertical_bias="0.149" />
 
     <Button
         android:id="@+id/button_view_branding"
@@ -82,21 +64,81 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_view_map"
         app:layout_constraintTop_toBottomOf="@+id/button_delete_coordinates"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.181" />
 
     <Button
-        android:id="@+id/button_stop_service"
+        android:id="@+id/button_delete_coordinates"
         android:layout_width="182dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/stop_service"
+        android:text="@string/delete_coordinates"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_start_service"
+        app:layout_constraintStart_toEndOf="@+id/button_view_coordinates"
+        app:layout_constraintTop_toBottomOf="@+id/button_stop_service"
+        app:layout_constraintVertical_bias="0.149" />
+
+    <Button
+        android:id="@+id/button_view_map"
+        android:layout_width="181dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/view_map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_view_branding"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_view_coordinates"
+        app:layout_constraintVertical_bias="0.181" />
+
+    <Button
+        android:id="@+id/button_view_final_coordinates"
+        android:layout_width="194dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/view_final_coordinates"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_delete_final_coordinates"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_view_map"
+        app:layout_constraintVertical_bias="0.301" />
+
+    <Button
+        android:id="@+id/button_start_service"
+        android:layout_width="181dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/start_service"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_stop_service"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.242" />
+        app:layout_constraintVertical_bias="0.07" />
+
+    <Button
+        android:id="@+id/button_cluster_locations"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:text="@string/cluster_locations"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_delete_final_coordinates" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
