--- a/app/src/main/res/layout/activity_branding.xml
+++ b/app/src/main/res/layout/activity_branding.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BrandingActivity">
+    tools:context=".location.activities.BrandingActivity">
 
     <EditText
         android:id="@+id/editText_search_minutes"
